@@ -1,5 +1,5 @@
 {
-  "count": 163,
+  "count": 164,
   "uniques": 1,
   "views": [
     {
@@ -39,6 +39,11 @@
     },
     {
       "timestamp": "2022-05-21T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-24T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
