@@ -1,3 +1,10 @@
+2022-05-24T08:13:07Z:
+* notice: last 14d: unq all: 1 164
+* notice: prev accum: outdated-unq outdated-all / unq all: 11 227 / 19 390
+* notice: next accum: outdated-unq outdated-all / unq all: 11 227 / 20 391
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: changed dates: [2022-05-24]
+
 2022-05-24T00:52:00Z:
 * notice: last 14d: unq all: 1 163
 * notice: prev accum: outdated-unq outdated-all / unq all: 10 199 / 19 385
